--- a/purchasePurchaseBills2.html
+++ b/purchasePurchaseBills2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Lekkaa</title>
+  <title>Lekka</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" type="text/css" href="icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link rel="stylesheet" type="text/css" href="css/bill_page.css">
 </head>
 
 <body>
@@ -143,6 +144,10 @@
                     <tr>
                       <td><label>CGST@9.0%</label></td>
                       <td><label>Rs. 6.66</label></td>
+                    </tr>
+                    <tr>
+                      <td><label>Tax amount in total</label></td>
+                      <td><label>Rs. 20.88</label></td>
                     </tr>
                     <tr>
                       <th><label>Total</label></th>
