--- a/salesDeliveryChallan2.html
+++ b/salesDeliveryChallan2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Lekkaa</title>
+  <title>Lekka</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" type="text/css" href="icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link rel="stylesheet" type="text/css" href="css/bill_page.css">
 </head>
 
 <body>
@@ -39,11 +40,13 @@
           <label>VRL Transport service</label>
         </div>
         <div class="col-md-3 mb-3">
-          <label>Dispatch by:</label>
-          <label>Transporter Name</label><br />
+          <label>Dispatch by:</label><br />
           <label>LR Number: </label>
         </div>
-        <div class="col-md-6 mb-3 text-right">
+        <div class="col-md-3 mb-3">
+          <label>Transporter Name:</label>
+        </div>
+        <div class="col-md-3 mb-3 text-right">
           <label>Challan No: 1</label><br />
           <label>Date: 15-11-2019</label>
         </div>
@@ -125,6 +128,11 @@
             <span>Comment:</span><span></span><br />
             <span>Date:</span><span></span><br />
             <span>Signature:</span><span></span></p>
+          <label>Giri Enterprises</label> 
+          <p>Block No 1, Camp street, Pune-411001, India<br />
+              Mobile Number: 9481646771<br />
+              Bank Name: Maharashtra Bank<br />
+              NEFT number: sti7473221512</p>
         </div>
         <div class="col-md-12 col-lg-5 mb-3">
           <div class="text-center">
