--- a/salesRetailSaleInvoice2.html
+++ b/salesRetailSaleInvoice2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Lekkaa</title>
+  <title>Lekka</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" type="text/css" href="icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link rel="stylesheet" type="text/css" href="css/bill_page.css">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
           <label>Invoice number:</label>
           <label>RT01</label><br />
           <label>Date & time:</label>
-          <label>14-11-2019</label>
+          <label>14-11-2019 08:15</label>
         </div>
       </div>
             
@@ -58,11 +59,11 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Item Name</th>
-              <th>HSN/SAC</th>
+              <th>Items/Description</th>
               <th>Quantity</th>
-              <th>Price/Unit</th>
-              <th>GST</th>
+              <th>Rate</th>
+              <th>Tax (%)</th>
+              <th>Tax Amount</th>
               <th>Amount</th>
             </tr>
           </thead>
@@ -70,37 +71,37 @@
             <tr>
               <td>1</td>
               <td>Coupler (hard) 1.5 inch</td>
-              <td></td>
               <td>1</td>
               <td>Rs 42.00</td>
-              <td>7.56(18.0%)</td>
+              <td>18.0%</td>
+              <td>7.56</td>
               <td>Rs 49.56</td>
             </tr>
             <tr>
               <td>2</td>
               <td>Coupler (hard) 1.5 inch</td>
-              <td></td>
               <td>2</td>
               <td>Rs 12.00</td>
-              <td>4.32(18.0%)</td>
+              <td>18.0%</td>
+              <td>4.32</td>
               <td>Rs 28.32</td>
             </tr>
             <tr>
               <td>3</td>
               <td>Coupler (hard) 1.5 inch</td>
-              <td></td>
               <td>1</td>
               <td>Rs 8.00</td>
-              <td>1.44(18.0%)</td>
+              <td>18.0%</td>
+              <td>1.44</td>
               <td>Rs 9.44</td>
             </tr>
             <tr>
               <td>4</td>
               <td>PVC pipe (1inch) 4ft</td>
-              <td></td>
               <td>1</td>
               <td>Rs 42.00</td>
-              <td>7.56(18.0%)</td>
+              <td>18.0%</td>
+              <td>7.56</td>
               <td>Rs 49.56</td>
             </tr>
           </tbody>
@@ -108,8 +109,8 @@
             <tr>
               <th></th>
               <th>Total:</th>
-              <th></th>
               <th>5</th>
+              <th></th>
               <th></th>
               <th>Rs 20.88</th>
               <th>Rs 136.88</th>
