--- a/salesDeliveryChallan.html
+++ b/salesDeliveryChallan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Lekkaa</title>
+  <title>Lekka</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="salesSaleInvoices.html"><img src="images/lekkaa_logo.png" alt="Lekkaa" /></a>
+          <a class="navbar-brand" href="salesSaleInvoices.html"><img src="images/lekkaa_logo.png" alt="Lekka" /></a>
           <ul class="navbar-nav topbar" style="position: absolute; top: 0; right: 0;">
             <li class="nav-item">
               <div class="searchbar">
@@ -87,7 +87,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="salesSaleInvoices.html">Sale invoices</a>
-                  <a class="dropdown-item" href="salesPropermaInvoice.html">Properma invoice</a>
+                  <a class="dropdown-item" href="salesProformaInvoice.html">Properma invoice</a>
                   <a class="dropdown-item" href="salesRetailSaleInvoice.html">Retail sale invoice</a>
                   <a class="dropdown-item" href="salesPaymentIn.html">Payment in</a>
                   <a class="dropdown-item" href="salesQuotation.html">Quotation</a>
@@ -301,16 +301,23 @@
 
       <!-- Form row -->
       <div class="form-row">
-        <div class="form-group col-md-3 mb-3">
+        <div class="form-group col-md-2 mb-3">
           <label for="challanNo">Challan No</label>
           <input type="text" class="form-control" id="challanNo" placeholder="" value="" required>
           <div class="valid-feedback">
             Looks good!
           </div>
         </div>
-        <div class="form-group col-md-4 mb-3">
-          <label for="transporterName">Dispatch by</label>
-          <input type="text" class="form-control" id="transporterName" placeholder="Transporter Name" value="" required>
+        <div class="form-group col-md-3 mb-3">
+          <label for="dispatchBy">Dispatch by</label>
+          <input type="text" class="form-control" id="dispatchBy" placeholder="" value="" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="form-group col-md-3 mb-3">
+          <label for="transporterName">Transporter name</label>
+          <input type="text" class="form-control" id="transporterName" placeholder="" value="" required>
           <div class="valid-feedback">
             Looks good!
           </div>
@@ -320,6 +327,20 @@
           <input type="text" class="form-control" id="gstNumber" placeholder="" value="" required>
           <div class="valid-feedback">
             Looks good!
+          </div>
+        </div>
+      </div>
+
+      <!-- Form row -->
+      <div class="form-row">
+        <div class="col-auto mb-3">
+          <div class="custom-control custom-radio custom-control-inline">
+            <input type="radio" id="taxExclude" name="tax1" class="custom-control-input">
+            <label class="custom-control-label" for="taxExclude">Tax Exclude</label>
+          </div>
+          <div class="custom-control custom-radio custom-control-inline">
+            <input type="radio" id="taxInclude" name="tax1" class="custom-control-input">
+            <label class="custom-control-label" for="taxInclude">Tax Include</label>
           </div>
         </div>
       </div>
@@ -336,6 +357,7 @@
               <th>Price/Unit</th>
               <th>Disc (%)</th>
               <th>Disc Amount</th>
+              <th>Tax (%)</th>
               <th>Tax Amount</th>
               <th>Amount</th>
             </tr>
@@ -345,10 +367,11 @@
               <td data-title="Item Name">Coupler (hard) 1.5 inche</td>
               <td data-title="HSN Code"></td>
               <td data-title="Quantity">HSN / SAC</td>
-              <td data-title="Unit">200</td>
+              <td data-title="Unit">no unit</td>
               <td data-title="Price/Unit">Rs 32.49</td>
               <td data-title="Disc (%)">18.0%</td>
               <td data-title="Disc Amount">Rs 45.57</td>
+              <td data-title="Tax (%)">18.0%</td>
               <td data-title="Tax Amount">Rs 45.57</td>
               <td data-title="Amount">Rs 45.57</td>
             </tr>
@@ -356,17 +379,18 @@
               <td data-title="Item Name">Coupler (hard) 1.5 inche</td>
               <td data-title="HSN Code"></td>
               <td data-title="Quantity">HSN / SAC</td>
-              <td data-title="Unit">200</td>
+              <td data-title="Unit">no unit</td>
               <td data-title="Price/Unit">Rs 32.49</td>
               <td data-title="Disc (%)">18.0%</td>
               <td data-title="Disc Amount">Rs 45.56</td>
+              <td data-title="Tax (%)">18.0%</td>
               <td data-title="Tax Amount">Rs 45.56</td>
               <td data-title="Amount">Rs 45.57</td>
             </tr>
           </tbody>
           <tfoot class="cf">
             <tr>
-              <th colspan="8">Total:</th>
+              <th colspan="9">Total:</th>
               <th>Rs 435.57</th>
             </tr>
           </tfoot>
