--- a/salesPaymentIn2.html
+++ b/salesPaymentIn2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Lekkaa</title>
+  <title>Lekka</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" type="text/css" href="icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <link rel="stylesheet" type="text/css" href="css/bill_page.css">
 </head>
 
 <body>
