--- a/salesProformaInvoice2.html
+++ b/salesProformaInvoice2.html
@@ -31,7 +31,7 @@
         </h1>
       </div>
 
-      <h3 class="text-center">Sales invoice</h3>
+      <h3 class="text-center">Proforma invoice</h3>
       
       <!-- Form row -->
       <div class="form-row">
