--- a/purchaseDebitNote2.html
+++ b/purchaseDebitNote2.html
@@ -201,10 +201,9 @@
             <br /> 
             <label class="mt-5">Authorized Signatory</label>
           </div>
+        </div>
       </div>
     </div>
-
   </form>
-
 </body>
 </html>
