--- a/purchasePurchaseBills2.html
+++ b/purchasePurchaseBills2.html
@@ -27,7 +27,7 @@
         <h1 class="mb-0 text-gray-800">
           <img src="images/dummy_logo.png" width="100px" style="float: left;" />
           <span class="d-md-block">Shreenidhi Electricals and solar system</span>
-          <span>Phone no:</span> <label>9481646771</label>
+          <span class="phone">Phone no:</span> <label>9481646771</label>
         </h1>
       </div>
 
