--- a/salesProformaInvoice2.html
+++ b/salesProformaInvoice2.html
@@ -47,6 +47,8 @@
         <div class="col-md-4 mb-3">
           <label>Ship to:</label>
           <label>Giri Enterprises</label><br />
+          <span>Place of supply:</span>
+          <label>Pune</label><br /> 
           <span>Terms:</span>
           <label>Due on Receipt</label><br /> 
           <span>P.O.no:</span>
@@ -178,7 +180,7 @@
           </div>
           <div class="text-center">
             <hr />
-            <label>For. Shreenidhi Electricals and solar system</label>   
+            <label>For, Shreenidhi Electricals and solar system</label>   
             <br /> 
             <label class="mt-5">Authorized Signatory</label>
           </div>
