--- a/salesQuotation2.html
+++ b/salesQuotation2.html
@@ -46,7 +46,9 @@
           <span>Mobile number:</span>
           <label>9481646771</label><br />
           <span>GST number:</span>
-          <label>9481646771</label>
+          <label>9481646771</label><br />
+          <span>Ref number:</span>
+          <label>578</label>
         </div>
         <div class="col-md-4 mb-3 text-right">
           <span>Estimate No:</span>
@@ -112,7 +114,7 @@
       <!-- Form row -->
       <div class="form-row">
         <div class="col-md-7 mb-3">
-          <span>ESTIMATE Amount in Words</span>   
+          <span>Estimate Amount in Words</span>   
           <p><label>Seventy Six Thousand Eight Hundred and Six Rupees and Twenty Paisa only</label></p>
           <hr />
           <span>Terms and Conditions</span>   
@@ -155,7 +157,7 @@
           </div>
           <div class="text-center">
             <hr />
-            <label>For. Shreenidhi Electricals and solar system</label>   
+            <label>For, Shreenidhi Electricals and solar system</label>   
             <br /> 
             <label class="mt-5">Authorized Signatory</label>
           </div>
