--- a/salesSaleOrder2.html
+++ b/salesSaleOrder2.html
@@ -154,7 +154,7 @@
           </div>
           <div class="text-center">
             <hr />
-            <label>For. Shreenidhi Electricals and solar system</label>   
+            <label>For, Shreenidhi Electricals and solar system</label>   
             <br /> 
             <label class="mt-5">Authorized Signatory</label>   
           </div>
