--- a/settingsTransaction.html
+++ b/settingsTransaction.html
@@ -79,7 +79,7 @@
                   </span>
                 </a>
               </li>
-              <li class="nav-item dropdown active">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="salesSaleInvoices.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Sales"></span>
                   Sales 
@@ -122,7 +122,7 @@
                   <a class="dropdown-item" href="#">Sales report</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="settingsGeneral.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Settings"></span>
                   Settings
@@ -139,7 +139,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="icon icon-Settings"></span>
+                  <span class="icon-Hepand-Support"></span>
                   Help & support
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -166,7 +166,7 @@
         <!-- Content Row -->
         <div class="row card1_row">
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">20%</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
             </div>
           </div>
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">37</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">205</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">80</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -321,7 +321,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="invoiceBillNo" name="invoiceBillNo" class="custom-control-input">
                   <label class="custom-control-label" for="invoiceBillNo">Invoice/Bill No.</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="cashSalebyDefault" name="cashSalebyDefault" class="custom-control-input">
                   <label class="custom-control-label" for="cashSalebyDefault">Cash Sale by default</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -343,7 +343,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="billingNameofParties" name="billingNameofParties" class="custom-control-input">
                   <label class="custom-control-label" for="billingNameofParties">Billing Name of Parties</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -354,7 +354,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="customersPODetailsonTransactions" name="customersPODetailsonTransactions" class="custom-control-input">
                   <label class="custom-control-label" for="customersPODetailsonTransactions">Customers P.O. Details on Transactions</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -367,7 +367,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="DonotShowInvoicePreview" name="DonotShowInvoicePreview" class="custom-control-input">
                   <label class="custom-control-label" for="DonotShowInvoicePreview">Do not Show Invoice Preview</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -378,7 +378,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="enablePasscodeforTransactionDelete" name="enablePasscodeforTransactionDelete" class="custom-control-input">
                   <label class="custom-control-label" for="enablePasscodeforTransactionDelete">Enable Passcode for transaction delete</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -389,7 +389,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="discountDuringPayments" name="discountDuringPayments" class="custom-control-input">
                   <label class="custom-control-label" for="discountDuringPayments">Discount During Payments</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -400,7 +400,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="linkPaymentstoInvoices" name="linkPaymentstoInvoices" class="custom-control-input">
                   <label class="custom-control-label" for="linkPaymentstoInvoices">Link Payments to Invoices</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -411,7 +411,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="dueDatesandPaymentTerms" name="dueDatesandPaymentTerms" class="custom-control-input">
                   <label class="custom-control-label" for="dueDatesandPaymentTerms">Due Dates and Payment Terms</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -426,7 +426,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="inclusiveExclusiveTaxonRate" name="inclusiveExclusiveTaxonRate" class="custom-control-input">
                   <label class="custom-control-label" for="inclusiveExclusiveTaxonRate">Inclusive/Exclusive Tax on Rate (Price/Unit)</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -437,7 +437,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="displayPurchasePriceofItems" name="displayPurchasePriceofItems" class="custom-control-input">
                   <label class="custom-control-label" for="displayPurchasePriceofItems">Display Purchase Price of Items</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -448,7 +448,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="showlast5SalePriceofItems" name="showlast5SalePriceofItems" class="custom-control-input">
                   <label class="custom-control-label" for="showlast5SalePriceofItems">Show last 5 Sale Price of Items</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -458,7 +458,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="freeItemQuantity" name="freeItemQuantity" class="custom-control-input">
                   <label class="custom-control-label" for="freeItemQuantity">Free Item Quantity</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -468,7 +468,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="count" name="count" class="custom-control-input">
                   <label class="custom-control-label" for="count">Count</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -531,7 +531,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="transactionWiseTax" name="transactionWiseTax" class="custom-control-input">
                   <label class="custom-control-label" for="transactionWiseTax">Transaction wise Tax</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -542,7 +542,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="transactionWiseDiscount" name="transactionWiseDiscount" class="custom-control-input">
                   <label class="custom-control-label" for="transactionWiseDiscount">Transaction wise Discount</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -553,7 +553,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="roundOffTotal" name="roundOffTotal" class="custom-control-input">
                   <label class="custom-control-label" for="roundOffTotal">Round Off Total</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
