--- a/user_detail.html
+++ b/user_detail.html
@@ -85,6 +85,22 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col">
+          <div class="file-field">
+            <div class="img-preview z-depth-1-half mb-4">
+              <img src="images/BlankLogo.png" class="img-fluid"
+                alt="example placeholder">
+            </div>
+            <div class="d-flex justify-content-center justify-content-middle">
+              <div class="btn btn-mdb-color btn-rounded float-left">
+                <span>Add Logo</span>
+                <input type="file">
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
           <div class="btn-row">
             <button class="btn btn-primary mr-2">Submit</button>
             <button class="btn btn-default">Cancel</button>
