--- a/purchaseDebitNote2.html
+++ b/purchaseDebitNote2.html
@@ -197,7 +197,7 @@
           </div>
           <div class="text-center">
             <hr />
-            <label>For. Shreenidhi Electricals and solar system</label>   
+            <label>For, Shreenidhi Electricals and solar system</label>   
             <br /> 
             <label class="mt-5">Authorized Signatory</label>
           </div>
