--- a/purchasePurchaseOrder.html
+++ b/purchasePurchaseOrder.html
@@ -79,7 +79,7 @@
                   </span>
                 </a>
               </li>
-              <li class="nav-item dropdown active">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="salesSaleInvoices.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Sales"></span>
                   Sales 
@@ -96,7 +96,7 @@
                   <a class="dropdown-item" href="salesCreditNote.html">Sale return</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="purchasePurchaseBills.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Purchase"></span>
                   Purchase
@@ -139,7 +139,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="icon icon-Settings"></span>
+                  <span class="icon-Hepand-Support"></span>
                   Help & support
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -166,7 +166,7 @@
         <!-- Content Row -->
         <div class="row card1_row">
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">20%</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
             </div>
           </div>
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">37</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">205</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">80</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -437,7 +437,7 @@
           
           <!-- Form row -->
           <div class="form-row form-group mb-3 flex_end">
-            <label class="col text-right mb-0 form-inline flex_end" for="balancedAmount">Balanced Amount</label>
+            <label class="col text-right mb-0 form-inline flex_end" for="balancedAmount">Balance amount</label>
             <div class="col">
               <input type="text" id="balancedAmount" class="col form-control">
             </div>
