--- a/salesDeliveryChallan2.html
+++ b/salesDeliveryChallan2.html
@@ -138,7 +138,7 @@
         <div class="col-md-5 mb-3">
           <div class="text-center">
             <hr />
-            <label>For. Shreenidhi Electricals and solar system</label>   
+            <label>For, Shreenidhi Electricals and solar system</label>   
             <br /> 
             <label class="mt-5">Authorized Signatory</label>
           </div>
