--- a/settingsGeneral.html
+++ b/settingsGeneral.html
@@ -79,7 +79,7 @@
                   </span>
                 </a>
               </li>
-              <li class="nav-item dropdown active">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="salesSaleInvoices.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Sales"></span>
                   Sales 
@@ -122,7 +122,7 @@
                   <a class="dropdown-item" href="#">Sales report</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="settingsGeneral.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Settings"></span>
                   Settings
@@ -139,7 +139,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="icon icon-Settings"></span>
+                  <span class="icon-Hepand-Support"></span>
                   Help & support
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -166,7 +166,7 @@
         <!-- Content Row -->
         <div class="row card1_row">
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">20%</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
             </div>
           </div>
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">37</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">205</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">80</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -321,7 +321,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="enablePasscode" name="enablePasscode" class="custom-control-input">
                   <label class="custom-control-label" for="enablePasscode">Enable Passcode</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -330,7 +330,7 @@
             <div class="form-row">
               <div class="col-auto mb-3">
                 <label>Business Currency</label>
-                <a class="badge badge-info">!</a>
+                <span class="icon-info"></span>
               </div>
             </div>
 
@@ -352,7 +352,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="enableAutoLaunch" name="enableAutoLaunch" class="custom-control-input">
                   <label class="custom-control-label" for="enableAutoLaunch">Enable Auto Launch</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -363,7 +363,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="gstinNumber" name="gstinNumber" class="custom-control-input">
                   <label class="custom-control-label" for="gstinNumber">GSTIN Number</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -376,7 +376,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="estimateQuotation" name="estimateQuotation" class="custom-control-input">
                   <label class="custom-control-label" for="estimateQuotation">Estimate/Quotation</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -387,7 +387,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="salePurchaseOrder1" name="salePurchaseOrder1" class="custom-control-input">
                   <label class="custom-control-label" for="salePurchaseOrder1">Sale/Purchase Order</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -398,7 +398,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="salePurchaseOrder2" name="salePurchaseOrder2" class="custom-control-input">
                   <label class="custom-control-label" for="salePurchaseOrder2">Other Income</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -409,7 +409,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="deliveryChallan" name="deliveryChallan" class="custom-control-input">
                   <label class="custom-control-label" for="deliveryChallan">Delivery Challan</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -421,7 +421,7 @@
                     <div class="custom-control custom-checkbox custom-control-inline">
                       <input type="checkbox" id="goodsReturn1" name="goodsReturn1" class="custom-control-input">
                       <label class="custom-control-label" for="goodsReturn1">Goods Return on Delivery Challan</label>
-                      <a class="badge badge-info">!</a>
+                      <span class="icon-info"></span>
                     </div>
                   </div>
                 </div>
@@ -433,7 +433,7 @@
                     <div class="custom-control custom-checkbox custom-control-inline">
                       <input type="checkbox" id="goodsReturn2" name="goodsReturn2" class="custom-control-input">
                       <label class="custom-control-label" for="goodsReturn2">Print Amount in Delivery Challan</label>
-                      <a class="badge badge-info">!</a>
+                      <span class="icon-info"></span>
                     </div>
                   </div>
                 </div>
@@ -459,7 +459,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="autoBackup" name="autoBackup" class="custom-control-input">
                   <label class="custom-control-label" for="autoBackup">Auto Backup</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -468,7 +468,7 @@
             <div class="form-row">
               <div class="col-auto mb-3">
                 <label>Last Backup 12/12/2019  |  11:23 PM</label>
-                <a class="badge badge-info">!</a>
+                <span class="icon-info"></span>
               </div>
             </div>
 
