--- a/settingsItem.html
+++ b/settingsItem.html
@@ -79,7 +79,7 @@
                   </span>
                 </a>
               </li>
-              <li class="nav-item dropdown active">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="salesSaleInvoices.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Sales"></span>
                   Sales 
@@ -122,7 +122,7 @@
                   <a class="dropdown-item" href="#">Sales report</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="settingsGeneral.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <span class="icon icon-Settings"></span>
                   Settings
@@ -139,7 +139,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="icon icon-Settings"></span>
+                  <span class="icon-Hepand-Support"></span>
                   Help & support
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -166,7 +166,7 @@
         <!-- Content Row -->
         <div class="row card1_row">
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">20%</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
             </div>
           </div>
 
-          <!-- SALES & Purchase Card Example -->
+          <!-- Sales & purchase Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">37</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">SALES & Purchase</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Sales & purchase</div>
                     </div>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">205</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
             </div>
           </div>
 
-          <!-- Products Range Card Example -->
+          <!-- Products range Card Example -->
           <div class="col-sm-6 col-lg-3 mb-4">
             <div class="card1">
               <div class="card shadow h-100 py-2">
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col ml-2">
                       <div class="h5 mb-0 font-weight-bold text-primary">80</div>
-                      <div class="text-xs font-weight-bold text-primary text-capitalize mb-1">Products Range</div>
+                      <div class="text-xs font-weight-bold text-primary mb-1">Products range</div>
                     </div>
                   </div>
                 </div>
@@ -321,7 +321,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="enablePasscode" name="enablePasscode" class="custom-control-input">
                   <label class="custom-control-label" for="enablePasscode">Enable Passcode</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -342,7 +342,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="barcodeScan" name="barcodeScan" class="custom-control-input">
                   <label class="custom-control-label" for="barcodeScan">Barcode Scan</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -353,7 +353,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Stock Maintenance</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -364,7 +364,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Items Unit</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -375,7 +375,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Item Category</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -386,7 +386,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Party Wise Item Rate</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -397,7 +397,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Description</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -408,7 +408,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Item Wise Tax</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
@@ -419,7 +419,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                   <input type="checkbox" id="stockMaintenance" name="stockMaintenance" class="custom-control-input">
                   <label class="custom-control-label" for="stockMaintenance">Item Wise Discount</label>
-                  <a class="badge badge-info">!</a>
+                  <span class="icon-info"></span>
                 </div>
               </div>
             </div>
